2004-03-16  Johan Dahlin  <johan@gnome.org>

	* jhbuild/config.py (Config.setup_env): If PKG_CONFIG_PATH is
	unset, set it to $libdir/pkgconfig:/usr/lib/pkgconfig, so a
	mozilla installation in /usr can be used.

2004-03-04  James Henstridge  <james@daa.com.au>

	* README, jhbuild/main.py: some help updates from Andreas
	Persenius <ndap@ndap.net>.

2004-03-03  James Henstridge  <james@daa.com.au>

	* jhbuild/main.py (main): treat getopt.error like UsageError

	* jhbuild/moduleset.py (_parse_module_set): don't download module
	files from network if nonetwork is true.

	* jhbuild/utils/httpcache.py (Cache.load): add a nonetwork
	optional argument.  If nonetwork is True, files will be returned
	from cache even if it is expired.  If the file is not in the
	cache, raise an error.
	(load): pass through the nonetwork argument.

	* jhbuild/main.py (main): remove the catch-all except clause,
	instead replacing it with clauses for UsageError (print error and
	a usage message) and FatalError (print error).  This way real
	jhbuild bugs should result in useful tracebacks while simple
	runtime errors should result in nice error messages.

	* jhbuild/modtypes/tarball.py (Tarball.do_unpack): raise
	FatalError instead of TypeError.

	* jhbuild/modtypes/mozilla.py (MozillaModule.get_mozilla_ver):
	raise FatalError.

	* jhbuild/frontends/buildscript.py (BuildScript.__init__): raise
	FatalError rather than use asserts.

	* jhbuild/commands/sanitycheck.py (do_sanitycheck): raise
	UsageError if extra arguments found.

	* jhbuild/commands/bootstrap.py (do_bootstrap): raise UsageError
	rather than getopt.error.

	* jhbuild/commands/base.py (run): raise FatalError instead of
	RuntimeError.
	(do_update_one): raise FatalError rather than SystemExit.
	(do_build_one): same here.

	* jhbuild/config.py (Config.__init__): print tracebacks for bugs
	in config files.

	* jhbuild/moduleset.py (ModuleSet.get_module_list): raise
	UsageError instead of ValueError.
