@@ -1,3 +1,11 @@
+2004-03-16  Kristian Rietveld  <kris@babi-pangang.org>
+
+	* jhbuild/main.py (main): write error message to stderr
+	when reading the config file fails.
+
+	* jhbuild/config.py (Config): raise an exception when
+	the creation of the aclocaldir fails.
+
 2004-03-16  Johan Dahlin  <johan@gnome.org>
 
 	* jhbuild/config.py (Config.setup_env): If PKG_CONFIG_PATH is
